# A-Maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  labyrinth.py  main.py  menu.py  options.py  parsing.py  pyproject.toml  subject.txt  task_list.txt
algos/: algo_bfs.py  algo_dfs.py  imperfect_maze.py  kruskal.py
maze/: create_maze.py  labyrinth.py  logo.py  maze-old.py  maze.py  pacome.maze.py  parsing.py  pattern_logo.py  utils_enum.py
maze_core/: LICENSE  README.md  pyproject.toml  test.py
maze_core/mazegen/: test.py
maze_core/mazegen/algos/: __init__.py  algo_bfs.py  algo_dfs.py  imperfect_maze.py  kruskal.py
maze_core/mazegen/maze/: __init__.py  logo.py  maze.py  output_maze.py  utils_enum.py
maze_core/mazegen/options/: timer.py
mazegen/algos/: algo_bfs.py  algo_dfs.py  imperfect_maze.py  kruskal.py
mazegen/maze/: logo.py  maze.py  output_maze.py  utils_enum.py
mazegen/utils/: __init__.py  output_maze.py  parser.py  timer.py
old/: pacome.maze.py
options/: menu.py  options.py
utils/: output_maze.py  parser.py  timer.py
