[tool.poetry]
package-mode = false
name = "A-Maze-ing"
version = "0.0.1"
description = ""
authors = ["papilaz <papilaz@student.42lyon.fr>", "cpietrza <cpietrza@student.42lyon.fr>"]

[tool.poetry.dependencies]
python = "^3.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"