[tool.poetry]
package-mode = false
name = "A-Maze-ing"
version = "0.0.1"
description = ""
authors = ["papilaz <papilaz@student.42lyon.fr>", "cpietrza <cpietrza@student.42lyon.fr>"]

[tool.poetry.dependencies]
python = "^3.12.3"
readchar = "^4.2.0"
rich = "^13.7.1"
pydantic = "^2.6"
flake8 = "^7.3.0"
mypy = "^1.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
