[tool.poetry]
name = "mazegen"
version = "1.0.0"
description = "A core Python package for generating, solving, and exporting mazes."
authors = [
    "papilaz <papilaz@student.42lyon.fr>",
    "cpietrza <cpietrza@student.42lyon.fr>"
]
readme = "README.md"
license = "MIT"
packages = [{ include = "mazegen" }]

[tool.poetry.dependencies]
python = "^3.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
